# archlinux-installer

./: .gitignore  .pre-commit-config.yaml  build.py  format_code  pyproject.toml  vm.py  vm_crypt.py  vm_efi.py
archinst/: aur.py  block_device.py  cmd.py  crypt.py  fs.py  git.py  grub.py  initcpio.py  log.py  mount.py  part.py  pkg.py  reflector.py  systemctl.py  time.py  user.py
archinst.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
