[tool.poetry]
name = "archinst"
version = "0.1.0"
description = ""
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
pylint = "^2.5.0"
mypy = "^0.780"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
