[tool.poetry]
name = "archinst"
version = "0.1.0"
description = ""
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "1.6.2"
flake8 = "3.8.3"
isort = "4.3.21"
jedi = "0.17.2"
mypy = "0.782"
pylint = "2.6.0"
rope = "0.17.0"
black = "19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
